sources/CPP/include/Ers/ErsApiFunctions.h

// Temporary typedef until we found a good place for shared information.
typedef uint64_t EntityID;
    ERS_IMPORT void* ERS_Debugger_Create(void* modelContainerPtr);
    ERS_IMPORT void* ERS_Debugger_Create_Window(void* modelContainerPtr, void* windowPtr);
    ERS_IMPORT void ERS_Debugger_Destroy(void* ptr);
    ERS_IMPORT void ERS_Debugger_BeginUpdate(void* ptr);
    ERS_IMPORT void ERS_Debugger_EndUpdate(void* ptr);
    ERS_IMPORT void* ERS_Debugger_GetWindow(void* ptr);
    ERS_IMPORT bool ERS_Debugger_Get_IsRunning(void* ptr);
    ERS_IMPORT void ERS_Debugger_Set_IsRunning(void* ptr, bool value);
    ERS_IMPORT void* ERS_Debugger_GetRenderContext(void* ptr);
    ERS_IMPORT bool ERS_Debugger_Is3DMode(void* ptr);
    ERS_IMPORT void* ERS_Debugger_GetSelectedSimulator(void* ptr);
    ERS_IMPORT EntityID ERS_Debugger_GetSelectedEntity(void* ptr);
    ERS_IMPORT uint32_t ERS_Debugger_Get_TopBarDockID(void* ptr);
    ERS_IMPORT uint32_t ERS_Debugger_Get_MainDockID(void* ptr);
    ERS_IMPORT uint32_t ERS_Debugger_Get_LeftSidebarDockID(void* ptr);
    ERS_IMPORT uint32_t ERS_Debugger_Get_CenterDockID(void* ptr);
    ERS_IMPORT uint32_t ERS_Debugger_Get_RightSidebarDockID(void* ptr);
    ERS_IMPORT uint32_t ERS_Debugger_Get_CenterMainDockID(void* ptr);
    ERS_IMPORT uint32_t ERS_Debugger_Get_CenterBottomDockID(void* ptr);
    ERS_IMPORT void ERS_RunWithProgressBar();
    ERS_IMPORT void ERS_SetBindingType(const char* bindingType);
    ERS_IMPORT void ERS_License_ForceOnlineFetch();
    ERS_IMPORT void ERS_Initialize();
    ERS_IMPORT void ERS_Uninitialize();
    ERS_IMPORT uint32_t ERS_GetMajorVersion();
    ERS_IMPORT uint32_t ERS_GetMinorVersion();
    ERS_IMPORT uint32_t ERS_GetPatchVersion();
    ERS_IMPORT bool ERS_IsDebugBuild();
    ERS_IMPORT bool ERS_License_Check();
    ERS_IMPORT void ERS_License_Activate(int licenseType);
    ERS_IMPORT void ERS_License_Deactivate();
    ERS_IMPORT uint32_t ERS_License_Info_DaysRemaining();
    ERS_IMPORT int ERS_License_Info_LicenseType();
    ERS_IMPORT bool ERS_License_HasFeature(const char* featureCode);
    ERS_IMPORT int ERS_License_GetLimits_MaxJobSystemCores();
    ERS_IMPORT int ERS_License_GetLimits_MaxComponentTypes();
    ERS_IMPORT char* ERS_License_EditionName();
    ERS_IMPORT void ERS_Logger_Trace(const char* message);
    ERS_IMPORT void ERS_Logger_Debug(const char* message);
    ERS_IMPORT void ERS_Logger_Warning(const char* message);
    ERS_IMPORT void ERS_Logger_Info(const char* message);
    ERS_IMPORT void ERS_Logger_Error(const char* message);
    ERS_IMPORT void ERS_Logger_Critical(const char* message);
    ERS_IMPORT void ERS_Logger_SetLogLevel(int logLevel);
    ERS_IMPORT void ERS_Logger_AddCallback(void(*logCallback)(int level, const char* message, void* callbackData), void* callbackData);
    ERS_IMPORT char* ERS_Settings_GetSetting(const char* section, const char* message, const char* defaultValue);
    ERS_IMPORT void ERS_Settings_SetSetting(const char* section, const char* message, const char* value);
    ERS_IMPORT void ERS_Settings_Clear();
    ERS_IMPORT bool ERS_VirtualFileSystem_MountDirectory(const char* path, const char* directoryName);
    ERS_IMPORT bool ERS_Serializer_IsWriting(void* serializerHandle);
    ERS_IMPORT void ERS_Serializer_SerializeUInt64(void* serializerHandle, const char* key, uint64_t* value);
    ERS_IMPORT void ERS_Serializer_SerializeInt64(void* serializerHandle, const char* key, int64_t* value);
    ERS_IMPORT void ERS_Serializer_SerializeUInt32(void* serializerHandle, const char* key, uint32_t* value);
    ERS_IMPORT void ERS_Serializer_SerializeInt32(void* serializerHandle, const char* key, int32_t* value);
    ERS_IMPORT void ERS_Serializer_SerializeDouble(void* serializerHandle, const char* key, double* value);
    ERS_IMPORT void ERS_Serializer_SerializeBool(void* serializerHandle, const char* key, bool* value);
    ERS_IMPORT void ERS_Serializer_SerializeFloat(void* serializerHandle, const char* key, float* value);
    ERS_IMPORT void ERS_Serializer_SerializeString(void* serializerHandle, const char* key, char** value, int* length);
    ERS_IMPORT void ERS_Serializer_PushObject(void* serializerHandle, const char* key);
    ERS_IMPORT void ERS_Serializer_PopObject(void* serializerHandle);
    ERS_IMPORT void ERS_Serializer_SetObject(void* serializerHandle, int index);
    ERS_IMPORT void ERS_Serializer_PushArray(void* serializerHandle, const char* key, int* size);
    ERS_IMPORT void ERS_Serializer_PopArray(void* serializerHandle);
    ERS_IMPORT int ERS_Serializer_GetArraySize(void* serializerHandle);
    ERS_IMPORT void ERS_Serializer_SaveToFolder(void* modelContainerInstance, const char* folderPath);
    ERS_IMPORT void* ERS_Serializer_LoadFromFolder(const char* folderPath);
    ERS_IMPORT uint32_t ERS_GlobalComponentRegistry_RegisterScriptBehavior(const char* name, void*(*CreateInstance)(void* handle), void* handle, void(*OnCreation)(void* scriptBehaviorInstance), void(*OnAwake)(void* scriptBehaviorInstance), void(*OnStart)(void* scriptBehaviorInstance), void(*OnUpdate)(void* scriptBehaviorInstance), void(*OnLateUpdate)(void* scriptBehaviorInstance), void(*OnDestroy)(void* scriptBehaviorInstance), void(*OnEntering)(void* scriptBehaviorInstance, EntityID child), void(*OnEntered)(void* scriptBehaviorInstance, EntityID child), void(*OnExiting)(void* scriptBehaviorInstance, EntityID child), void(*OnExited)(void* scriptBehaviorInstance, EntityID child), void(*OnInputChannelReady)(void* scriptBehaviorInstance, EntityID inputChannel), void(*OnOutputChannelReady)(void* scriptBehaviorInstance, EntityID outputChannel), void(*OnReceive)(void* scriptBehaviorInstance, EntityID inputChannel, EntityID child), void(*Serialization)(void* scriptBehaviorInstance, void* serializer), void(*OnSubModelMove)(void* scriptBehaviorInstance, EntityID newConnectedEntity));
    ERS_IMPORT void* ERS_EventScheduler_RegisterLocalEventType(uint64_t typeIdentifier, void(*callback)(void* data), void(*destructor)(void* data), void(*serialize)(void* data, void* serializerHandle), void*(*allocator)(), const char* uniqueName, const char* sourceLibrary, size_t size, const char* filePath, int lineNumber);
    ERS_IMPORT void* ERS_EventScheduler_RegisterSyncEventType(uint64_t eventTypeIdentifier, void(*onSenderSideCallback)(), void(*onTargetSideCallback)(), void(*serializeData)(void* dataContext, void* serializerHandle), uint32_t dataBlockSize, const char* name, const char* sourceLibrary, const char* filePath, int lineNumber);
    ERS_IMPORT void ERS_SubModel_AddSubModelContext(void* subModelHandle, uint32_t SubModelContextTypeIdx, const char* name, void* SubModelContextPtr, void(*destructor)(void* contextHandle));